--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3751,6 +3751,16 @@
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Bordes2013,
+  author    = {Bordes, A. and Usunier, N. and Garcia-Duran, A. and Weston, J. and Yakhnenko, O.},
+  title     = {Translating embeddings for modeling multi-relational data},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2013},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://proceedings.neurips.cc/paper/2013/hash/1cecc7a77928ca8133fa24680a88d2f9-Abstract.html},
+}
+
 @Book{Bordwall2006,
   title     = {The way Hollywood tells it: story and style in modern movies},
   publisher = {University of California Press},
@@ -4148,6 +4158,17 @@
   doi       = {10.1037/a0037839},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Bowman2015,
+  author    = {Bowman, S. R. and Angeli, G. and Potts, C. and Manning, C. D.},
+  title     = {A large annotated corpus for learning natural language inference},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2015},
+  pages     = {632-642},
+  doi       = {10.18653/v1/d15-1075},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
 }
 
 @Article{Boykov2004,
@@ -5928,6 +5949,18 @@
   url       = {https://dl.acm.org/citation.cfm?id=1859723},
 }
 
+@Article{Chen2010b,
+  author    = {Chen, B. and Dong, X. and Jiao, D. and Wang, H. and Zhu, Q. and Ding, Y. and Wild, D. J.},
+  title     = {Chem2Bio2RDF: a semantic framework for linking and data mining chemogenomic and systems chemical biology data},
+  journal   = {BMC Bioinformatics},
+  year      = {2010},
+  volume    = {11},
+  pages     = {255},
+  doi       = {10.1186/1471-2105-11-255},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @InProceedings{Chen2011,
   author    = {Chen, Q. and Shao, Y.},
   title     = {A Hybrid Genetic Algorithm to Solve Zero-One Knapsack Problem},
@@ -6806,6 +6839,17 @@
   doi       = {10.5642/jhummath.201702.03},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@InProceedings{Conforti2018,
+  author    = {Conforti, C. and Pilehvar, M. T. and Collier, N.},
+  title     = {Towards Automatic Fake News Detection: Cross-Level Stance Detection in News Articles},
+  booktitle = {1st Workshop on Fact Extraction and Verification},
+  year      = {2018},
+  pages     = {40-49},
+  doi       = {10.18653/v1/w18-5507},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
 }
 
 @Article{Cong2014,
@@ -15325,6 +15369,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.04},
 }
 
+@InProceedings{Ji2015,
+  author    = {Ji, G. and He, S. and Xu, L. and Liu, K. and Zhao, J.},
+  title     = {Knowledge Graph Embedding via Dynamic Mapping Matrix},
+  booktitle = {53rd Annual Meeting of the Association for Computational Linguistics / 7th International Joint Conference on Natural Language Processing},
+  year      = {2015},
+  pages     = {687-696},
+  doi       = {10.3115/v1/p15-1067},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @InProceedings{Jia2020a,
   author    = {Jia, Y. and Dou, H. and Cao, S. and Zan, H.},
   title     = {Speaker Identification and Its Application to Social Network Construction for Chinese Novels},
@@ -18875,6 +18930,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.17},
 }
 
+@InProceedings{Lewis2020,
+  author    = {Lewis, M. and Liu, Y. and Goyal, N. and Ghazvininejad, M. and Mohamed, A. and Levy, O. and Stoyanov, V. and Zettlemoyer, L.},
+  title     = {BART: Denoising Sequence-to-Sequence Pre-training for Natural Language Generation, Translation, and Comprehension},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {7871-7880},
+  doi       = {10.18653/v1/2020.acl-main.703},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Ley2009,
   author    = {Ley, M.},
   title     = {DBLP - Some Lessons Learned},
@@ -19194,6 +19260,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.24},
 }
 
+@Article{Li2019a,
+  author    = {Li, P. and Mao, K.},
+  title     = {Knowledge-oriented convolutional neural network for causal relation extraction from natural language texts},
+  journal   = {Expert Systems with Applications},
+  year      = {2019},
+  volume    = {115},
+  pages     = {512-523},
+  doi       = {10.1016/j.eswa.2018.08.009},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Li2019t,
   author    = {Li, Z. and Zhang, L. and Song, G.},
   title     = {SepNE: Bringing Separability to Network Embedding},
@@ -19445,6 +19523,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.palgrave.com/gp/book/9781137001061},
 }
 
+@InProceedings{Lin2015,
+  author    = {Lin, Y. and Liu, Z. and Sun, M. and Liu, Y. and Zhu, X.},
+  title     = {Learning entity and relation embeddings for knowledge graph completion},
+  booktitle = {29th AAAI Conference on Artificial Intelligence},
+  year      = {2015},
+  pages     = {2181-2187},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://dl.acm.org/doi/10.5555/2886521.2886624},
+}
+
+@InProceedings{Lin2019,
+  author    = {Lin, B. Y. and Chen, X. and Chen, J. and Ren, X.},
+  title     = {Kagnet: Knowledge-aware graph networks for commonsense reasoning},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {2829-2839},
+  doi       = {10.18653/v1/D19-1282},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Electronic{Lind2012,
   author       = {Lind, B.},
   month        = {04},
@@ -19672,6 +19772,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/9781118783764.wbieme0092},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Liu2020,
+  author    = {Liu, W. and Zhou, P. and Zhao, Z. and Wang, Z. and Ju, Q. and Deng, H. and Wang, P.},
+  title     = {K-BERT: Enabling Language Representation with Knowledge Graph},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2020},
+  volume    = {34},
+  number    = {03},
+  pages     = {2901-2908},
+  doi       = {10.1609/aaai.v34i03.5681},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
 }
 
 @InCollection{Loewenstein2018,
@@ -20122,6 +20235,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/BigData.2016.7840693},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Lv2016a,
+  author    = {Lv, X. and Guan, Y. and Yang, J. and Wu, J.},
+  title     = {Clinical relation extraction with deep learning},
+  journal   = {International Journal of Hybrid Information Technology},
+  year      = {2016},
+  volume    = {9},
+  number    = {7},
+  pages     = {237-248},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://gvpress.com/journals/IJHIT/vol9_no7/22.pdf},
 }
 
 @Article{Lv2018,
@@ -21644,7 +21770,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Mellace2020,
-  author    = {Mellace, S. and Vani, K. and Antonucci, A.},
+  author    = {Mellace, S. and Vani, K and Antonucci, A.},
   title     = {Relation Clustering in Narrative Knowledge Graphs},
   booktitle = {AI4Narratives Workshop / 29th International Joint Conference on Artificial Intelligence \& 17th Pacific Rim International Conference on Artificial Intelligence},
   year      = {2020},
@@ -25066,6 +25192,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Article{Paulus2017,
+  author    = {Paulus, Romain and Xiong, Caiming and Socher, Richard},
+  title     = {A Deep Reinforced Model for Abstractive Summarization},
+  journal   = {arXiv},
+  year      = {2017},
+  volume    = {cs.CL},
+  pages     = {1705.04304},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://arxiv.org/abs/1705.04304},
+}
+
 @Article{Pavlyshenko2012,
   author    = {Pavlyshenko, B.},
   title     = {The Clustering of Author's Texts of English Fiction in the Vector Space of Semantic Fields},
@@ -26611,6 +26749,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.crcpress.com/Digital-Image-Sequence-Processing-Compression-and-Analysis/Reed/p/book/9780849315268},
 }
 
+@InProceedings{Reimers2019,
+  author    = {Reimers, N. and Gurevych, I.},
+  title     = {Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {3982-3992},
+  doi       = {10.18653/v1/d19-1410},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Reis2011,
   author    = {Reis, H. T. and Maniaci, M. R. and Caprariello, P. A. and Eastwick, P. W. and Finkel, E. J.},
   title     = {Familiarity does indeed promote attraction in live interaction.},
@@ -27719,6 +27868,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1088/0305-4470/38/21/005},
   owner     = {Vincent},
   timestamp = {2010.08.03},
+}
+
+@InProceedings{Ruan2016,
+  author    = {Ruan, T. and Wang, M. and Sun, J. and Wang, T. and Zeng, L. and Yin, Y. and Gao, J.},
+  title     = {An automatic approach for constructing a knowledge base of symptoms in Chinese},
+  booktitle = {IEEE International Conference on Bioinformatics and Biomedicine},
+  year      = {2016},
+  pages     = {1657-1662},
+  doi       = {10.1109/bibm.2016.7822767},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
 }
 
 @InCollection{Rubin2006,
@@ -29172,6 +29332,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.24},
 }
 
+@Article{Short2019,
+  author    = {Short, M.},
+  title     = {Text Mining and Subject Analysis for Fiction$\mathsemicolon$ or, Using Machine Learning and Information Extraction to Assign Subject Headings to Dime Novels},
+  journal   = {Cataloging \& Classification Quarterly},
+  year      = {2019},
+  volume    = {57},
+  number    = {5},
+  pages     = {315-336},
+  doi       = {10.1080/01639374.2019.1653413},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Shroff2010,
   author    = {Shroff, N. and Turaga, P. and Chellappa, R.},
   title     = {Video Précis: Highlighting Diverse Aspects of Videos},
@@ -29715,6 +29888,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11042-014-1950-1},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Socher2013,
+  author    = {Socher, R. and Chen, D. and Manning, C. and Ng, A.},
+  title     = {Reasoning with neural tensor networks for knowledge base completion},
+  booktitle = {26th International Conference on Neural Information Processing Systems},
+  year      = {2013},
+  editor    = {1},
+  pages     = {926-934},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://dl.acm.org/doi/10.5555/2999611.2999715},
 }
 
 @Article{Sol2010,
@@ -30909,6 +31094,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.26},
 }
 
+@InProceedings{Tang2016,
+  author    = {Tang, Z. and Wang, D. and Zhang, Z.},
+  title     = {Recurrent neural network training with dark knowledge transfer},
+  booktitle = {IEEE International Conference on Acoustics, Speech and Signal Processing},
+  year      = {2016},
+  pages     = {5900-5904},
+  doi       = {10.1109/icassp.2016.7472809},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Tangherlini2013,
   author    = {Tangherlini, T. R.},
   title     = {The Folklore Macroscope: Challenges for a Computational Folkloristics},
@@ -31791,6 +31987,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Trieu2017,
+  author    = {Trieu, L. Q. and Tran, H. Q. and Tran, M.-T.},
+  title     = {News Classification from Social Media Using Twitter-based Doc2Vec Model and Automatic Query Expansion},
+  booktitle = {8th International Symposium on Information and Communication Technology},
+  year      = {2017},
+  pages     = {460-467},
+  doi       = {10.1145/3155133.3155206},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Electronic{Trilcke2015,
   author       = {Trilcke, P. and Fischer, F. and Göbel, M. and Kampkaspar, D.},
   year         = {2015},
@@ -32261,7 +32468,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Vani2019,
-  author    = {Vani, K. and Antonucci, A.},
+  author    = {Vani, K and Antonucci, A.},
   title     = {NOVEL2GRAPH: Visual Summaries of Narrative Text Enhanced by Machine Learning},
   booktitle = {2nd Workshop on Narrative Extraction From Texts},
   year      = {2019},
@@ -32274,7 +32481,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Vani2020,
-  author    = {Vani, K. and Mellace, S. and Antonucci, A.},
+  author    = {Vani, K and Mellace, S. and Antonucci, A.},
   title     = {Temporal Embeddings and Transformer Models for Narrative Text Understanding},
   booktitle = {3rd International Workshop on Narrative Extraction from Texts},
   year      = {2020},
@@ -32613,14 +32820,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Volpetti2020,
-  author        = {Volpetti, C. and Vani, K. and Antonucci, A.},
-  title         = {Temporal word embeddings for narrative understanding},
-  booktitle     = {12th International Conference on Machine Learning and Computing},
-  year          = {2020},
-  pages         = {68-72},
-  doi           = {10.1145/12345.67890},
-  owner         = {Vincent},
-  timestamp     = {2019.11.29},
+  author    = {Volpetti, C. and Vani, K and Antonucci, A.},
+  title     = {Temporal word embeddings for narrative understanding},
+  booktitle = {12th International Conference on Machine Learning and Computing},
+  year      = {2020},
+  pages     = {68-72},
+  doi       = {10.1145/12345.67890},
+  owner     = {Vincent},
+  timestamp = {2019.11.29},
 }
 
 @Article{vonFerber2012,
@@ -32953,6 +33160,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icdm.2011.59},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Wang2014,
+  author    = {Wang, Z. and Zhang, J. and Feng, J. and Chen, Z.},
+  title     = {Knowledge graph embedding by translating on hyperplanes},
+  booktitle = {28th AAAI Conference on Artificial Intelligence},
+  year      = {2014},
+  pages     = {1112-1119},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI14/paper/view/8531/0},
 }
 
 @Article{Wang2015,
@@ -33613,6 +33831,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.01},
 }
 
+@InProceedings{Williams2018,
+  author    = {Williams, A. and Nangia, N. and Bowman, S.},
+  title     = {A Broad-Coverage Challenge Corpus for Sentence Understanding through Inference},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {1112-1122},
+  doi       = {10.18653/v1/n18-1101},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @Article{Wills1999,
   author    = {Wills, G. J.},
   title     = {{NicheWorks}: Interactive Visualization of Very Large Graphs},
@@ -33768,6 +33997,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.abc-clio.com/Praeger/product.aspx?pc=D6234C},
 }
 
+@InProceedings{Wohlgenannt2016,
+  author    = {Wohlgenannt, G. and Chernyak, E. and Ilvovsky, D.},
+  title     = {Extracting social networks from literary text with word embedding tools},
+  booktitle = {Workshop on Language Technology Resources and Tools for Digital Humanities},
+  year      = {2016},
+  pages     = {18-25},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://www.aclweb.org/anthology/W16-4004/},
+}
+
 @InCollection{Wojnarowski2016,
   author    = {Wojnarowski, J. and Zawiślak, S.},
   title     = {Kazimierz Kuratowski- Biography and Genesis of the Theorem on Planar Graphs},
@@ -33856,6 +34096,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/365024.365098},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InProceedings{Worsham2018,
+  author    = {Worsham, J. and Kalita, J.},
+  title     = {Genre identification and the compositional effect of genre in literature},
+  booktitle = {27th International Conference on Computational Linguistics},
+  year      = {2018},
+  pages     = {1963-1973},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://www.aclweb.org/anthology/C18-1167},
 }
 
 @Article{Wright1991,
@@ -34387,6 +34638,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ins.2018.04.031},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@InProceedings{Yang2019,
+  author    = {Yang, Z. and Dai, Z. and Yang, Y. and Carbonell, J. and Salakhutdinov, R. R. and Le, Q. V.},
+  title     = {Xlnet: Generalized autoregressive pretraining for language understanding},
+  booktitle = {Advances in neural information processing systems},
+  year      = {2019},
+  pages     = {5754-5764},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://proceedings.neurips.cc/paper/2019/hash/dc6a7e655d7e5840e66733e9ee67cc69-Abstract.html},
+}
+
+@Article{Yao2019,
+  author    = {Yao, L. and Mao, C. and Luo, Y.},
+  title     = {KG-BERT: BERT for Knowledge Graph Completion},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CL},
+  pages     = {1909.03193},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+  url       = {https://arxiv.org/abs/1909.03193},
 }
 
 @InProceedings{Yassine2010,
@@ -35066,6 +35340,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@Article{Zhang2018,
+  author    = {Zhang, Y. and Lin, H. and Yang, Z. and Wang, J. and Zhang, S. and Sun, Y. and Yang, L.},
+  title     = {A hybrid model based on neural networks for biomedical relation extraction},
+  journal   = {Journal of Biomedical Informatics},
+  year      = {2018},
+  volume    = {81},
+  pages     = {83-92},
+  doi       = {10.1016/j.jbi.2018.03.011},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
+}
+
 @InProceedings{Zhang2019aa,
   author    = {Zhang, W. and Paudel, B. and Zhang, W. and Bernstein, A. and Chen, H.},
   title     = {Interaction Embeddings for Prediction and Explanation in Knowledge Graphs},
@@ -35378,6 +35664,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICCV.2015.11},
   owner     = {Vincent},
   timestamp = {2019.06.27},
+}
+
+@InProceedings{Zhu2019,
+  author    = {Zhu, X. and Cao, B. and Xu, S. and Liu, B. and Cao, J.},
+  title     = {Joint Visual-Textual Sentiment Analysis Based on Cross-Modality Attention Mechanism},
+  booktitle = {International Conference on Multimedia Modeling},
+  year      = {2019},
+  volume    = {11295},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {264-276},
+  doi       = {10.1007/978-3-030-05710-7_22},
+  owner     = {Vincent},
+  timestamp = {2020.12.15},
 }
 
 @Book{Zipf1949,
