--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6082,6 +6082,17 @@
   url       = {http://www.lrec-conf.org/proceedings/lrec2018/pdf/581.pdf},
 }
 
+@InProceedings{Chen2019,
+  author    = {Chen, J.-X. and Ling, Z.-H. and Dai, L.-R.},
+  title     = {A Chinese Dataset for Identifying Speakers in Novels},
+  booktitle = {Interspeech},
+  year      = {2019},
+  pages     = {1561-1565},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+  url       = {https://www.isca-speech.org/archive/Interspeech_2019/pdfs/1614.pdf},
+}
+
 @Article{Chen2019q,
   author    = {Chen, R. H.-G. and Chen, C.-C. and Chen, C.-M.},
   title     = {Unsupervised cluster analyses of character networks in fiction: Community structure and centrality},
@@ -9281,6 +9292,17 @@
   doi       = {10.18653/v1/d17-1287},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@InProceedings{Ek2018,
+  author    = {Ek, A. and Wirén, M. and Östling, R. and Björkenstam, K. N. and Grigonytė, G. and Gustafson Capková, S.},
+  title     = {Identifying speakers and addressees in dialogues extracted from literary fiction},
+  booktitle = {11th International Conference on Language Resources and Evaluation},
+  year      = {2018},
+  pages     = {817-824},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+  url       = {https://www.aclweb.org/anthology/L18-1131/},
 }
 
 @InProceedings{Ekin2003,
@@ -12534,6 +12556,17 @@
   timestamp = {2019.04.09},
 }
 
+@InProceedings{Greene2012,
+  author    = {Greene, E. and Mishra, T. and Haffner, P. and Conkie, A.},
+  title     = {Predicting character-appropriate voices for a TTS-based storyteller system},
+  booktitle = {13th Annual Conference of the International Speech Communication Association},
+  year      = {2012},
+  pages     = {2210-2213},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+  url       = {https://www.isca-speech.org/archive/interspeech_2012/i12_2210.html},
+}
+
 @Article{Greg1928,
   author    = {Greg, W. W.},
   title     = {Act-Divisions in Shakespeare},
@@ -15378,6 +15411,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/v1/p15-1067},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@InProceedings{Jia2018,
+  author    = {Jia, Y. and Wang, L. and Zan, H.},
+  title     = {Text Rewriting Pattern Mining Based on Monolingual Alignment},
+  booktitle = {Workshop on Chinese Lexical Semantics},
+  year      = {2018},
+  volume    = {11173},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {551-558},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-04015-4_47},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
 }
 
 @InProceedings{Jia2020a,
@@ -25204,6 +25251,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1705.04304},
 }
 
+@InProceedings{Pavllo2018,
+  author    = {Pavllo, D. and Piccardi, T. and West, R.},
+  title     = {Quootstrap: Scalable Unsupervised Extraction of Quotation-Speaker Pairs from Large News Corpora via Bootstrapping},
+  booktitle = {12h International AAAI Conference on Web and Social Media},
+  year      = {2018},
+  pages     = {231-240},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+  url       = {https://dlab.epfl.ch/people/west/pub/Pavllo-Piccardi-West_ICWSM-18.pdf},
+}
+
 @Article{Pavlyshenko2012,
   author    = {Pavlyshenko, B.},
   title     = {The Clustering of Author's Texts of English Fiction in the Vector Space of Semantic Fields},
@@ -26023,6 +26081,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   review    = {http://arxiv.org/abs/1602.07275},
   timestamp = {2016.03.01},
+}
+
+@InProceedings{Prasad2006,
+  author    = {Prasad, R. and Dinesh, N. and Lee, A. and Joshi, A. and Webber, B. L.},
+  title     = {Annotating attribution in the Penn discourse treebank},
+  booktitle = {Workshop on Sentiment and Subjectivity in Text},
+  year      = {2006},
+  pages     = {31-38},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+  url       = {https://dl.acm.org/doi/10.5555/1654641.1654646},
 }
 
 @Book{Prell2012,
@@ -28681,6 +28750,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@TechReport{Schmerling2017,
+  author      = {Schmerling, E.},
+  title       = {Whose Line Is It? Quote Attribution through Recurrent Neural Networks},
+  institution = {Stanford University},
+  year        = {2017},
+  owner       = {Vincent},
+  timestamp   = {2020.12.17},
+  url         = {https://cs224d.stanford.edu/reports/edward.pdf},
+}
+
 @InProceedings{Schmid1995,
   author    = {Schmid, H.},
   title     = {Improvements in Part-of-Speech Tagging with an Application to German},
@@ -31023,6 +31102,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Article{Tan2018,
+  author    = {Tan, J. and Wan, X. and Liu, H. and Xiao, J.},
+  title     = {QuoteRec: Toward Quote Recommendation for Writing},
+  journal   = {ACM Transactions on Information Systems},
+  year      = {2018},
+  volume    = {36},
+  number    = {3},
+  pages     = {34},
+  doi       = {10.1145/3183370},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
+}
+
 @Article{Tanahashi2012,
   author    = {Tanahashi, Y. and Ma, K.-L.},
   title     = {Design Considerations for Optimizing Storyline Visualizations},
@@ -32720,6 +32812,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1023/b:visi.0000013087.49260.fb},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Vishnubhotla2019,
+  author    = {Vishnubhotla, K. and Hammond, A. and Hirst, G.},
+  title     = {Are Fictional Voices Distinguishable? Classifying Character Voices in Modern Drama},
+  booktitle = {3rd Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2019},
+  pages     = {29-34},
+  doi       = {10.18653/v1/w19-2504},
+  owner     = {Vincent},
+  timestamp = {2020.12.17},
 }
 
 @Article{Vishwanathan2010,
